--- a/www/styles.css
+++ b/www/styles.css
@@ -62,14 +62,32 @@ input[type=text], input[type=password] {
 }
 
 .card4{
-    background-color: #303030;
+    background-color: white;
+    border-radius: 8px;
+    box-shadow: rgba(92, 97, 97, 0.1) 0px 3px 20px 0px;
     position: absolute;
     top:  75px;
     margin: auto;
-    border: 3px solid wheat;
     left: 340px;
-    width: 900px;
-    height: auto;
+    width: calc(100% - 360px);
+    max-height: 90%;
+	overflow: auto;
+}
+
+.export {
+	border: none;
+    color: rgb(255, 255, 255);
+    background-color: rgb(1, 113, 211);
+	padding: 10px 30px;
+    border-radius: 8px;
+	outline: none;
+	font-weight: 700;
+	cursor: pointer;
+	transition: all 100ms ease 0s
+}
+
+.export:hover {
+	opacity: 0.75;
 }
 
 .card {
@@ -185,32 +203,16 @@ input[type=text], input[type=password] {
 
 
 table {
-    font-family: arial, sans-serif;
     border-collapse: collapse;
     width: 100%;
-    color: white;
+    color: rgb(46, 54, 67);
   }
   td, th {
-    border: 1px solid white;
     text-align: left;
-    padding: 8px;
+    padding: 16px 0 16px 24px;
+	font-size: 18px;
   }
+  th {font-weight: 600; cursor: pointer; user-select: none;}
   tr:nth-child(even) {
-    background-color: #454545;
+    background-color: #f0f0f0;
   }
-  /* latin-ext */
-@font-face {
-    font-family: 'Monda';
-    font-style: normal;
-    font-weight: 400;
-    src: local('Monda Regular'), local('Monda-Regular'), url(https://fonts.gstatic.com/s/monda/v9/TK3tWkYFABsmjspvPho7vA.woff2) format('woff2');
-    unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-}
-    /* latin */
-@font-face {
-    font-family: 'Monda';
-    font-style: normal;
-    font-weight: 400;
-    src: local('Monda Regular'), local('Monda-Regular'), url(https://fonts.gstatic.com/s/monda/v9/TK3tWkYFABsmjsphPho.woff2) format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
